correct button visibility on password input

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -79,8 +79,8 @@
   cursor: pointer;
 }
 
-.far:active{
-  color: #7F60EB;
+.active{
+  color: #7F60EB!important;
 }
 
 .error{
